--- a/react/mimark/auth-react-node-main/auth-front/package.json
+++ b/react/mimark/auth-react-node-main/auth-front/package.json
@@ -10,11 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query-devtools": "^5.24.8",
+    "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.11.1"
+    "react-router-dom": "^6.11.1",
+    "react-toastify": "^10.0.4"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.3",
