--- a/react/mimark/auth-react-node-main/backmy/package.json
+++ b/react/mimark/auth-react-node-main/backmy/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-myconnection": "^1.0.4",
     "jsonwebtoken": "^9.0.2",
