--- a/react/mimark/auth-react-node-main/backmy/package.json
+++ b/react/mimark/auth-react-node-main/backmy/package.json
@@ -14,7 +14,7 @@
     "express-myconnection",
     "json"
   ],
-  "author": "Helber Rojas",
+  "author": "",
   "license": "ISC",
   "devDependencies": {
     "nodemon": "^3.0.3"
