--- a/react/mimark/auth-react-node-main/auth-front/package.json
+++ b/react/mimark/auth-react-node-main/auth-front/package.json
@@ -21,6 +21,9 @@
     "react-toastify": "^10.0.4"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.4.5",
+    "@testing-library/react": "^15.0.7",
+    "@testing-library/user-event": "^14.5.2",
     "@types/js-cookie": "^3.0.3",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
@@ -30,7 +33,9 @@
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "jsdom": "^24.0.0",
     "typescript": "^5.0.2",
-    "vite": "^4.5.3"
+    "vite": "^4.5.3",
+    "vitest": "^0.34.6"
   }
 }
