--- a/react/mimark/auth-react-node-main/auth-front/package.json
+++ b/react/mimark/auth-react-node-main/auth-front/package.json
@@ -18,7 +18,8 @@
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.1",
-    "react-toastify": "^10.0.4"
+    "react-toastify": "^10.0.4",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.4.5",
