--- a/react/mimark/auth-react-node-main/auth-front/package.json
+++ b/react/mimark/auth-react-node-main/auth-front/package.json
@@ -14,11 +14,13 @@
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
     "js-cookie": "^3.0.5",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.1",
-    "react-toastify": "^10.0.4",
+    "react-toastify": "^10.0.5",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
@@ -26,6 +28,7 @@
     "@testing-library/react": "^15.0.7",
     "@testing-library/user-event": "^14.5.2",
     "@types/js-cookie": "^3.0.3",
+    "@types/jspdf": "^2.0.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
